# datasette-tail

./: pyproject.toml
datasette_tail/: __init__.py
tests/: test_tail.py
