[project]
name = "datasette-tail"
version = "0.1a1"
description = "Tools for tailing your database"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette==1.0a19",
    "dictdiffer"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-tail"
Changelog = "https://github.com/datasette/datasette-tail/releases"
Issues = "https://github.com/datasette/datasette-tail/issues"
CI = "https://github.com/datasette/datasette-tail/actions"

[project.entry-points.datasette]
tail = "datasette_tail"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_tail = ["templates/*"]
