[project]
name = "datasette-tail"
version = "0.1a2"
description = "Tools for tailing your database"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette",
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a20",
    "dictdiffer"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-tail"
Changelog = "https://github.com/datasette/datasette-tail/releases"
Issues = "https://github.com/datasette/datasette-tail/issues"
CI = "https://github.com/datasette/datasette-tail/actions"

[project.entry-points.datasette]
tail = "datasette_tail"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_tail = ["templates/*"]
